--- a/test_robotjs/web/index.html
+++ b/test_robotjs/web/index.html
@@ -22,6 +22,8 @@
   </div>
 
   <!--这是一段注释。注释不会在浏览器中显示。-->
+  <script src="js/keyboard_events.js"></script>
+  <script src="js/mouse_events.js"></script>  
   <script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>
   <script src="js/ipc.js"></script>  
   <script src="js/foo_webrtc.js"></script>
