--- a/web/index.html
+++ b/web/index.html
@@ -18,7 +18,7 @@
     <button id="Call">Call</button>
   </div>
   <div>
-    <video id="remoteVideo" autoplay playsinline></video>
+    <video id="remoteVideo" tabIndex="-1" autoplay playsinline></video>
   </div>
 
 
